SERVER-11421: make applyOps call logOpForDbHash